@@ -193,10 +193,6 @@ org_gnome_popup_wizard (EPlugin *ep, EMEventTargetMessage *target)
 	char *notification;
 	char *start_message;
 
-	/* XXX:Remove this when server has a fix to show mails in shared-folder*/
-	if (!getenv("GROUPWISE_SHARED_FOLDER"))
-		return;
-
 	if (!msg)
 		return ;
 
