@@ -1,3 +1,10 @@
+2005-09-30  Vivek Jain <jvivek@novell.com>
+	
+	* shared-folder-common.c: (org_gnome_create_option)
+	 			: (org_gnome_shared_folder_factory)
+	* install-shared.c 	: (org_gnome_popup_wizard)
+	enable shared-folder functionalilty, remove env check 
+
 2005-09-30  Shreyas Srinivasan  <sshreyas@novell.com>
 
 	* proxy.c (proxy_page_changed_cb): Load proxy list only when
